[gd_scene load_steps=11 format=3 uid="uid://355a3lnpcb2v"]

[ext_resource type="Script" uid="uid://dgnx81ea350e7" path="res://Scripts/Enemy AI/enemy.gd" id="1_sdfya"]
[ext_resource type="Texture2D" uid="uid://l3wyk2xqiqfw" path="res://Assets/Enemies/Enemy Death.png" id="3_t0jbf"]
[ext_resource type="AudioStream" uid="uid://nfe5ep3dg6sv" path="res://Assets/SFX/enemy_hit.wav" id="3_v30fj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hbljs"]
atlas = ExtResource("3_t0jbf")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_654j3"]
atlas = ExtResource("3_t0jbf")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5vkn"]
atlas = ExtResource("3_t0jbf")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbfjv"]
atlas = ExtResource("3_t0jbf")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_748ib"]
atlas = ExtResource("3_t0jbf")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgix2"]
atlas = ExtResource("3_t0jbf")
region = Rect2(96, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_t0jbf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbljs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_654j3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5vkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbfjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_748ib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgix2")
}],
"loop": false,
"name": &"Death",
"speed": 18.0
}, {
"frames": [],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[node name="Enemy Template" type="Node2D"]
script = ExtResource("1_sdfya")

[node name="Pattern" type="Node2D" parent="."]

[node name="Death Effect" type="AnimatedSprite2D" parent="Pattern"]
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_t0jbf")
animation = &"Idle"
autoplay = "Idle"

[node name="Hit Sound" type="AudioStreamPlayer2D" parent="Pattern"]
stream = ExtResource("3_v30fj")

[node name="Hurtbox" type="Area2D" parent="Pattern"]
collision_layer = 19
collision_mask = 19

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Pattern"]

[connection signal="area_entered" from="Pattern/Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="Pattern/Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="Pattern/Hurtbox" to="." method="_on_hurtbox_body_exited"]
[connection signal="screen_exited" from="Pattern/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
